--- a/front/public/index.html
+++ b/front/public/index.html
@@ -13,9 +13,11 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <link
       rel="shortcut icon"
-      href="%PUBLIC_URL%/png-clipart-masaru-kato-kei-kurono-gantz-g-manga-gantz-text-manga.png"
+      href="%PUBLIC_URL%/png-transparent-masaru-kato-kei-kurono-gantz-g-manga-gantz-text-manga-logo-removebg-preview.png"
       type="image/x-icon"
     />
     <title>GANTZ Dashboard</title>
