--- a/front/public/index.html
+++ b/front/public/index.html
@@ -13,8 +13,11 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
     <link
       rel="shortcut icon"
       href="%PUBLIC_URL%/png-transparent-masaru-kato-kei-kurono-gantz-g-manga-gantz-text-manga-logo-removebg-preview.png"
